--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -1,8 +1,17 @@
 @import '@/assets/styles/variables.scss';
 
+@font-face {
+  font-family: 'Roboto Regular';
+  src: url('@/assets/fonts/Roboto-Regular.ttf');
+}
+
 html,
 body {
   margin: 0;
   padding: 0;
   height: 100%;
+}
+
+body {
+  font-family: 'Roboto Regular';
 }
